--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -17,7 +17,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* font-family: "Belanosima", sans-serif; */
+  font-family: "Belanosima", sans-serif;
   color: hsl(var(--color-primary-fg));
 }
 
